# Exo-OS

./: .bochsrc  .clang-format  .clippy.toml  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  .terminal_probe_bg.txt  BOOT_SUCCESS.md  BUILD_WSL_GUIDE.md  CHANGELOG_v0.7.0.md  COMMIT_SUMMARY.md  Cargo.toml  FILES_CREATED.md  FINAL_STATUS.md  FS_COMPLETE_NO_STUBS.md  FS_REVOLUTION_COMPLETE.md  GUIDE_RAPIDE_VIRTUALBOX.txt  IMPORTS_UPDATED.md  KNOWN_ISSUES.md  MODULE_STATUS.md  Makefile  NEXT_STEP.md  OPTIMISATIONS_ETAT.md  PATCH_NOTES.md  PROJET_FINAL_SYNTHESE.md  QUICKSTART.md  README.md  README_BUILD.md  README_old.md  README_v0.7.0.md  SESSION_12_JAN_2025_FINAL.md  SESSION_SUCCESS.txt  SMP_SUCCESS.md  STATUS.md  SUMMARY_v0.4.0.md  TEST_REPORT_v0.4.0.md  arborescence d’Exo-OS.txt  bochsrc.txt  bootimage.toml  (+56 more)
drivers/fs/: Cargo.toml
drivers/fs/src/: lib.rs
exo-boot/: Cargo.toml  build.rs
exo-boot/.cargo/: config.toml
exo-boot/linker/: bios.ld  linker.ld  uefi.ld
exo-boot/src/: main.rs  panic.rs
exo-boot/src/bios/: disk.rs  mbr.asm  mod.rs  stage2.asm  vga.rs
exo-boot/src/config/: defaults.rs  mod.rs  parser.rs
exo-boot/src/disk/: gpt.rs  mod.rs
exo-boot/src/display/: font.rs  framebuffer.rs  mod.rs
exo-boot/src/kernel_loader/: elf.rs  handoff.rs  mod.rs  relocations.rs  signing_key.rs  verify.rs
exo-boot/src/memory/: map.rs  mod.rs  paging.rs  regions.rs
exo-boot/src/uefi/: entry.rs  exit.rs  mod.rs  secure_boot.rs  services.rs
kernel/: Cargo.toml  build.rs  build_errors_full.txt  check_output.txt  linker.ld  rust-toolchain.toml  test_scheduler.sh
kernel/.cargo/: config.toml
kernel/phase3-tests/: Cargo.toml
kernel/phase3-tests/src/: lib.rs
kernel/src/: acpi.rs  boot_sequence.rs  cpu.rs  error.rs  lib.rs  logger.rs  main.rs  main.rs.bak  multiboot2.rs  perf_counters.rs  process.rs  splash.rs  userspace_boot.rs
kernel/src/acpi/: madt.rs  mod.rs  srat.rs  tables.rs
kernel/src/arch/: constants.rs  mod.rs  time.rs
kernel/src/bench/: context_switch_prod.rs  mod.rs
kernel/src/benches/: kernel_benches.rs
kernel/src/boot/: early_init.rs  late_init.rs  mod.rs  multiboot2.rs  phases.rs  recovery.rs
kernel/src/c_compat/: acpi.c  keyboard.c  mod.rs  pci.c  serial.c  serial.h  stubs.c  vga.c
kernel/src/drivers/: adaptive_block.rs  adaptive_driver.rs  bench_adaptive.rs  device_claims.rs  device_server_ipc.rs  dma.rs  loopback_driver.rs  mod.rs  msi.rs  pci_cfg.rs  pci_link.rs  pci_topology.rs  serial.rs  tests.rs  vga_text.rs
kernel/src/exophoenix/: forge.rs  handoff.rs  interrupts.rs  isolate.rs  mod.rs  resurrection.rs  sentinel.rs  ssr.rs  stage0.rs
kernel/src/ffi/: bindings.rs  c_str.rs  callbacks.rs  mod.rs  types.rs  va_list.rs
kernel/src/fs/: block_device.rs  core.rs  descriptor.rs  elf_loader_impl.rs  mod.rs  page_cache.rs
kernel/src/ipc/: bench_fusion.rs  benchmark_ipc.rs  capability.rs  channel.rs  descriptor.rs  fast_channel.rs  fusion_ring.rs  integration_test.rs  message.rs  mod.rs  named.rs  test_runtime.rs  tests.rs
kernel/src/libutils/: display.rs  mod.rs
kernel/src/loader/: elf.rs  elf64.rs  mod.rs  process_image.rs  spawn.rs
kernel/src/net/: arp.rs  (+11 more)
kernel/tests/: basic_boot.rs  test_fusion_ring.rs
libs/: CORRECTIONS_CRITIQUES.md  Cargo.toml  RAPPORT_COMPILATION_FINALE.md  RAPPORT_VALIDATION_GLOBALE.md  VERIFICATION_PROFONDE.md  lib.rs  rustc-ice-2026-05-14T21_11_46-913.txt  rustc-ice-2026-05-14T21_13_37-834.txt  test_libs.sh
libs/exo-crypto/: Cargo.toml
libs/exo-device/: Cargo.toml
libs/exo-fs/: Cargo.toml
libs/exo-graphics/: Cargo.toml
libs/exo-network/: Cargo.toml  build.rs
libs/exo-observability/: Cargo.toml  build.rs
libs/exo-phoenix-ssr/: Cargo.toml
libs/exo-posix/: Cargo.toml
libs/exo-rt/: Cargo.toml
libs/exo-runtime/: Cargo.toml
libs/exo-services/: Cargo.toml
libs/exo_allocator/: CHANGELOG.md  Cargo.toml  README.md  build.rs
libs/exo_config/: CHANGELOG.md  Cargo.toml  README.md
libs/exo_crypto/: CHANGELOG.md  Cargo.toml  README.md  build.rs
libs/exo_ipc/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  REFONTE_COMPLETE.md
libs/exo_logger/: CHANGELOG.md  Cargo.toml  README.md
libs/exo_metrics/: CHANGELOG.md  Cargo.toml  README.md
libs/exo_service_registry/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  INTEGRATION.md  README.md  TEST_COMMANDS.md  TEST_RESULTS.md  run_tests.sh
libs/exo_std/: ANALYSE_COMPLETE.md  CHANGELOG.md  CLEANUP_DUPLICATES.md  COMPILATION_SUCCESS.md  CORRECTIONS.md  Cargo.toml  FILES_INDEX.md  FILES_INDEX_V0.3.0.md  FINAL_REPORT.md  FINAL_REPORT_V0.3.0.md  INTRUSIVE_LIST_REPORT.md  OPTIMISATION_REPORT.md  PROGRESS_REPORT_V0.3.0.md  RAPPORT_FINAL_V0.3.0.md  README.md  RECAP_FINAL.md  REFACTORING_SUMMARY.md  STATUS_FINAL.md  SUMMARY.md  SUMMARY_V0.3.0.md  TEST_RESULTS_FINAL.md  V0.3.0_STATUS.md
libs/exo_text/: CHANGELOG.md  Cargo.toml  README.md
libs/exo_types/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  REFACTOR_COMPLETE.md
libs/generic-rt/: Cargo.toml
libs/io/: mod.rs  read.rs  seek.rs  write.rs
libs/ipc/: async_channel.rs  channel.rs  mod.rs  shared_mem.rs
libs/process/: command.rs  exit.rs  mod.rs  spawn.rs
libs/security/: capability.rs  crypto.rs  mod.rs  tpm.rs
libs/sync/: atomic.rs  mod.rs  mutex.rs  rwlock.rs
libs/thread/: join.rs  local.rs  mod.rs  spawn.rs
libs/time/: duration.rs  instant.rs  mod.rs  sleep.rs
posix_x/: Cargo.toml
posix_x/src/: lib.rs
servers/crypto_server/: Cargo.toml
servers/device_server/: Cargo.toml
servers/exo_shield/: Cargo.toml
servers/exosh/: Cargo.toml
servers/fb_server/: Cargo.toml
servers/init_server/: Cargo.toml
servers/input_server/: Cargo.toml
servers/ipc_router/: Cargo.toml
servers/memory_server/: Cargo.toml
servers/network_server/: Cargo.toml  EXONET_V4_AUDIT.md
userland/: Cargo.toml  hello.c  hello.elf  test_cow_fork.c  test_exec_vfs.c  test_fork_exec.c  test_hello.c  test_pipe.c
userland/package_manager/: Cargo.toml
userland/services/: Cargo.toml  README.md
userland/shell/: Cargo.toml
userspace/: Cargo.toml
userspace/libexo/: Cargo.toml
(+3272 files in other folders)
