# Workspace racine Exo-OS
# ──────────────────────────────────────────────────────────────────────────────
# libs/ est un workspace séparé (dépendances std + no_std mixtes).
# Il est exclu ici pour éviter l'erreur "workspaces cannot be nested".
# Rust-analyzer peut ouvrir les deux roots simultanément.
# ──────────────────────────────────────────────────────────────────────────────

[workspace]
resolver = "2"
members = [
    "kernel",
   # "drivers",
    "servers/crypto_server",
    "servers/device_server",
    "servers/exo_shield",
    "servers/init_server",
    "servers/ipc_router",
    "servers/memory_server",
    "servers/network_server",
    "servers/scheduler_server",
]
# libs/ gère son propre workspace Cargo.toml avec ses sous-crates std.
exclude = ["libs"]

[workspace.package]
version   = "0.1.0"
edition   = "2021"
authors   = ["Exo-OS Team"]
license   = "MIT OR Apache-2.0"

# Dépendances communes (no_std) partagées entre kernel et drivers.
[workspace.dependencies]
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "rwlock", "once"] }

[profile.dev]
opt-level     = 0
debug         = true
panic         = "abort"
codegen-units = 1             # Empêche le splitting CGU → global_asm! reste dans le même objet

[profile.release]
opt-level     = 3
lto           = true
panic         = "abort"
codegen-units = 1
strip         = "none"
