# Workspace racine Exo-OS
# ──────────────────────────────────────────────────────────────────────────────
# libs/ est un workspace séparé (dépendances std + no_std mixtes).
# Il est exclu ici pour éviter l'erreur "workspaces cannot be nested".
# Rust-analyzer peut ouvrir les deux roots simultanément.
# ──────────────────────────────────────────────────────────────────────────────

[workspace]
resolver = "2"
members = [
    "kernel",
   # "drivers",
    "servers/crypto_server",
    "servers/device_server",
    "servers/exo_shield",
    "servers/init_server",
    "servers/ipc_router",
    "servers/memory_server",
    "servers/network_server",
    "servers/scheduler_server",
]
# libs/ gère son propre workspace Cargo.toml avec ses sous-crates std.
exclude = ["libs"]

[workspace.package]
version   = "0.1.0"
edition   = "2021"
authors   = ["Exo-OS Team"]
license   = "MIT OR Apache-2.0"

# Dépendances communes (no_std) partagées entre kernel et drivers.
[workspace.dependencies]

# Sync kernel
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "rwlock", "once", "barrier"] }

# Structures de données
bitflags              = { version = "2",    default-features = false }
zerocopy              = { version = "0.7",  default-features = false, features = ["derive"] }
hashbrown             = { version = "0.13", default-features = false }
# NOTE: 0.14+ avec features=["alloc"] tire rustc-std-workspace-alloc → conflit E0464 avec -Z build-std
intrusive-collections = { version = "0.9",  default-features = false }

# Architecture
multiboot2 = { version = "0.24",   default-features = false }
raw-cpuid  = { version = "11",  default-features = false }
acpi       = { version = "5",   default-features = false }
volatile   = { version = "0.5", default-features = false }

# Cryptographie (partagée kernel + exofs, versionnée une seule fois)
blake3           = { version = "1",    default-features = false, features = ["pure"] }
# chacha20 (stream cipher seul) : compatible x86_64-unknown-none, pas de poly1305/SIMD
chacha20         = { version = "0.9",  default-features = false }
# chacha20poly1305 : INCOMPATIBLE kernel (poly1305 → SSE2 → LLVM ERROR x86_64-unknown-none)
# Réservé aux serveurs userspace (ring 3).
chacha20poly1305 = { version = "0.10", default-features = false }
aes-gcm          = { version = "0.10", default-features = false }
x25519-dalek     = { version = "2",    default-features = false, features = ["static_secrets"] }
ed25519-dalek    = { version = "2",    default-features = false }
hkdf             = { version = "0.12", default-features = false }
argon2           = { version = "0.5",  default-features = false }
siphasher        = { version = "0.3",  default-features = false }

# Compression
lz4_flex = { version = "0.11", default-features = false }

# ELF
xmas-elf = { version = "0.9", default-features = false }

# IPC
postcard = { version = "1", default-features = false, features = ["alloc"] }

# Logging
log = { version = "0.4", default-features = false }

# Tests
proptest          = { version = "1", default-features = false, features = ["alloc"] }
static_assertions = { version = "1" }

[profile.dev]
opt-level     = 0
debug         = true
panic         = "abort"
codegen-units = 1             # Empêche le splitting CGU → global_asm! reste dans le même objet

[profile.release]
opt-level     = 3
lto           = true
panic         = "abort"
codegen-units = 1
strip         = "none"
