[package]
name        = "exo-boot"
version     = "0.1.0"
edition     = "2021"
authors     = ["Exo-OS Team"]
description = "Bootloader Exo-OS — UEFI/BIOS — no_std"
license     = "MIT"
build       = "build.rs"

# ─── PROFIL RELEASE ───────────────────────────────────────────────────────────
[profile.release]
opt-level     = "s"      # Optimise pour la taille (bootloader)
lto           = true
codegen-units = 1
panic         = "abort"  # Pas de stack unwinding en boot

[profile.dev]
panic         = "abort"

# ─── FEATURES ─────────────────────────────────────────────────────────────────
[features]
default      = ["uefi-boot"]
# Le parseur GPT/MBR partagé (exo-partition) est TOUJOURS lié : ses primitives
# (crc32/guid/gpt/mbr) sont sans allocateur → utilisables sur le chemin BIOS
# (no_std sans heap). uefi-boot active en plus `exo-partition/alloc` (scan() +
# BlockReader), car le chemin UEFI a un allocateur (uefi-services) + Block I/O.
uefi-boot    = ["exo-partition/alloc"]
bios-boot    = []
kaslr        = []        # Active KASLR (randomisation adresse kernel)
# NOTE : il n'y a PLUS de feature `secure-boot`/`dev-skip-sig`. La vérification
# Ed25519+SHA-512 (exo-verity) est TOUJOURS compilée et exécutée — elle ne peut
# pas être « éteinte ». Seule la POLITIQUE (refuser vs avertir un kernel non
# signé) est configurable, via `secure_boot_required` (exo-boot.cfg) et l'état
# UEFI Secure Boot. Une image ALTÉRÉE est refusée dans tous les cas.

# ─── DÉPENDANCES UEFI ─────────────────────────────────────────────────────────
[dependencies]
# UEFI runtime — fourni les types et protocoles UEFI standardisés
uefi = { version = "0.26", features = ["alloc"] }

# Fournit le #[entry] macro et l'allocateur UEFI
uefi-services = "0.23"

# Types x86_64 (PhysAddr, VirtAddr, page tables)
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }

# Spinlock no_std pour les sections critiques
spinning_top = { version = "0.3", default-features = false }

# Vérification de boot Ed25519+SHA-512 PARTAGÉE avec l'outil de signature
# (tools/kernel_signer) — source UNIQUE du format + de la logique. TOUJOURS liée :
# la crypto de secure-boot n'est plus optionnelle (fini la « fausse sécurité »).
exo-verity = { path = "../drivers/security/verity", default-features = false }

# Configuration formatage minimal sans std
arrayvec = { version = "0.7", default-features = false }

# Parseur GPT/MBR réel PARTAGÉ avec le kernel (source unique, équiv. redox
# partitionlib). no_std, aucune dépendance externe. Primitives sans allocateur
# (BIOS) ; `alloc` (scan/BlockReader) activé via la feature uefi-boot.
exo-partition = { path = "../drivers/storage/partition", default-features = false }

# ─── DÉPENDANCES BUILD ────────────────────────────────────────────────────────
[build-dependencies]
# Récupère le chemin de la cible pour sélectionner le bon linker script
# ─── WORKSPACE ────────────────────────────────────────────────────────────────
# exo-boot est un workspace séparé (target UEFI/BIOS ≠ target kernel).
# Empêche Cargo de le rattacher au workspace racine Exo-OS.
[workspace]