[package]
name    = "exo-os-kernel"
version = "0.1.0"
edition = "2021"

# Crate de type bibliothèque — re-exports publics + kernel_init()
[lib]
name    = "exo_os_kernel"
path    = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

# Binaire d'entrée — _start (ASM) → kernel_main() + panic/OOM handlers
[[bin]]
name = "exo-os-kernel"
path = "src/main.rs"

# ── Dépendances (no_std uniquement) ─────────────────────────────────────────

[dependencies]
exo-virtio-blk = { path = "../drivers/storage/virtio_blk" }

# ── Workspace partagé ────────────────────────────────────────────────────────
spin                  = { workspace = true }
bitflags              = { workspace = true }
zerocopy              = { workspace = true }
hashbrown             = { workspace = true }
intrusive-collections = { workspace = true }
log                   = { workspace = true }
siphasher             = { workspace = true }
lz4_flex              = { workspace = true }
xmas-elf              = { workspace = true }
postcard              = { workspace = true }

# ── Architecture  arch/x86_64/ ───────────────────────────────────────────────
# arch/x86_64/boot/multiboot2.rs
multiboot2 = { workspace = true }
# arch/x86_64/boot/uefi.rs — types UEFI (Memory map)
uefi-raw   = { version = "0.6", default-features = false }
# arch/x86_64/cpu/features.rs — CPUID
raw-cpuid  = { workspace = true }
# arch/x86_64/acpi/
acpi       = { workspace = true }
# arch/x86_64/apic/ + memory/dma/ — registres MMIO
volatile   = { workspace = true }

# ── Crypto no_std (RustCrypto — vecteurs IETF, pas d'implémentation from scratch)
# RÈGLE CRYPTO-CRATES  : JAMAIS d'implémentation maison. Toutes les primitives
# crypto via crates RustCrypto validées IETF (doc ExoOS_Dependencies_Complete.md).
# INTERDIT : libsodium (requiert std+libc), ring (trop de deps système)
#
# CONTRAINTE TARGET x86_64-unknown-none (-sse2 dans target JSON) :
#   poly1305  → LLVM ERROR: Do not know how to split (128-bit ops sans SSE2)
#   polyval   → même erreur (dep transitif de ghash/aes-gcm)
#   Conséquence : chacha20poly1305 ET aes-gcm NE COMPILENT PAS pour ce target.
#   Alternative : chacha20 (stream) + blake3_mac pour l'authentification kernel.
#   Les AEAD complets (chacha20poly1305, aes-gcm) sont réservés aux serveurs
#   userspace (ring 3) où SSE2 est disponible et l'état FPU est sauvegardé.
blake3           = { workspace = true }          # security/crypto/blake3.rs + exofs/core/blob_id.rs
# chacha20 crate INCOMPATIBLE : déclenche LLVM ERROR split 128-bit sur x86_64-unknown-none
#   → xchacha20.rs utilise l'algorithme RFC 8439 en arithmétique u32 pure (ChaCha20 keystream)
#   + blake3 (ci-dessus) comme MAC AEAD — zéro dépendance SIMD/SSE2.
# chacha20poly1305 : INCOMPATIBLE kernel (poly1305 LLVM ERROR: split 128-bit)
# aes-gcm          : INCOMPATIBLE kernel (polyval LLVM ERROR: split 128-bit)
hkdf             = { workspace = true }          # security/crypto/kdf.rs (RFC 5869)
sha2             = { version = "0.10", default-features = false, features = ["force-soft"] }
  # requis par hkdf — force-soft évite SHA-NI (LLVM crash x86_64-unknown-none)
argon2           = { workspace = true }          # exofs/crypto/key_derivation.rs
x25519-dalek     = { workspace = true }          # security/crypto/x25519.rs
ed25519-dalek    = { workspace = true }          # security/crypto/ed25519.rs + code_signing.rs

[dev-dependencies]
proptest          = { workspace = true }
static_assertions = { workspace = true }
num-traits        = { workspace = true }

# ── Cible par défaut (peut être surchargée en ligne de commande) ─────────────

# Utiliser : cargo build --target ../x86_64-exo-os.json -Z build-std=core,alloc
