[workspace]
members = [
    "exo_std",
    "exo_crypto",
    "exo_types",
    "exo_ipc",
    "exo_allocator",
    "exo_text",
    "exo_config",
    "exo_logger",
    "exo_metrics",
    "exo_service_registry",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Exo-OS Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.3"
bytemuck = "1.17"
bitflags = "2.4"
log = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
