[workspace]
members = [
    # Bibliothèques kernel-space internes
    "exo_std",
    "exo_crypto",
    "exo_types",
    "exo_ipc",
    "exo_allocator",
    "exo_text",
    "exo_config",
    "exo_logger",
    "exo_metrics",
    "exo_service_registry",
    # Bibliothèque SSR ExoPhoenix (GI-01 Étape 10)
    "exo-phoenix-ssr",
    # Bibliothèques Ring3 — compatibilité POSIX / runtime userspace
    "exo-rt",
    "exo-alloc",
    "generic-rt",
    # exo-libc exclu : fork de relibc avec son propre workspace
    # musl-exo exclu : projet C (pas Cargo)
]
exclude = [
    "exo-libc",
    "musl-exo",
    "vendors",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Exo-OS Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.3"
bytemuck = "1.17"
bitflags = "2.4"
log = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
