[workspace]
members = [
    "init",
    "shell",
    "services",
    "fs_service",
    "net_service",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Exo-OS Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
exo_std = { path = "../libs/exo_std" }
exo_crypto = { path = "../libs/exo_crypto" }
exo_types = { path = "../libs/exo_types" }
exo_ipc = { path = "../libs/exo_ipc" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.3"
log = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
