# Workspace Rust userspace Exo-OS — Applications Ring3
# ──────────────────────────────────────────────────────────────────────────────
# Applications utilisateur : shell, coreutils, net_tools, compositor, etc.
# Les bibliothèques système (exo-libc, exo-rt, exo-alloc, musl-exo) sont dans libs/
#
# Pour compiler :
#   cd userspace && cargo build --target x86_64-unknown-linux-musl
# ──────────────────────────────────────────────────────────────────────────────

[workspace]
resolver = "2"
# Futurs membres : shell, coreutils, net_tools, compositor, package_manager
members = []

[workspace.package]
version  = "0.1.0"
edition  = "2021"
authors  = ["Exo-OS Team"]
license  = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto       = "fat"
codegen-units = 1
panic     = "abort"

[profile.dev]
opt-level = 0
debug     = true
panic     = "abort"
