[package]
name = "exo_allocator"
version = "0.1.0"
edition = "2021"
authors = ["Exo-OS Team"]
license = "MIT OR Apache-2.0"
description = "Custom memory allocators for Exo-OS (slab, bump, mimalloc)"
repository = "https://github.com/darkfireeee/Exo-OS"

[dependencies]
exo_types = { package = "exo-types", path = "../exo_types" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "allocator_bench"
harness = false

[lib]
name = "exo_allocator"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
