[package]
name = "exo_config"
version = "0.1.0"
edition = "2021"
authors = ["Exo-OS Team"]
license = "MIT OR Apache-2.0"
description = "Configuration management for Exo-OS"
repository = "https://github.com/darkfireeee/Exo-OS"

[dependencies]
exo_text = { path = "../exo_text", default-features = false }
# serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "exo_config"
path = "src/lib.rs"

[features]
default = ["toml"]
toml = []
hot_reload = []
validation = []
