[package]
name = "exo_ipc"
version = "0.2.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "Robust, performant, and secure inter-process communication for Exo-OS"
authors = ["Exo-OS Contributors"]
keywords = ["ipc", "message-passing", "channel", "lock-free", "zero-copy"]
categories = ["no-std", "concurrency"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
exo_types = { path = "../exo_types" }

[features]
default = []
fusion_rings = []

[package.metadata.exo-os]
role = "ipc"
stage = "core"