[package]
name = "exo_logger"
version = "0.1.0"
edition = "2021"
authors = ["Exo-OS Team"]
license = "MIT OR Apache-2.0"
description = "Structured logging system for Exo-OS"
repository = "https://github.com/darkfireeee/Exo-OS"

[dependencies]
# serde = { version = "1.0", default-features = false, features = ["derive"] }
# log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput_bench"
harness = false

[lib]
name = "exo_logger"
path = "src/lib.rs"

[features]
default = ["json"]
json = []
compression = []
async_io = []
