[package]
name = "exo_metrics"
version = "0.1.0"
edition = "2021"
authors = ["Exo-OS Team"]
license = "MIT OR Apache-2.0"
description = "Telemetry and metrics collection for Exo-OS"
repository = "https://github.com/darkfireeee/Exo-OS"

[dependencies]
# serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "atomic_bench"
harness = false

[lib]
name = "exo_metrics"
path = "src/lib.rs"

[features]
default = ["prometheus"]
prometheus = []
histograms = []
