[package]
name = "exo_service_registry"
version = "0.4.0"
edition = "2021"
authors = ["Exo-OS Team"]
license = "MIT OR Apache-2.0"
description = "Service discovery and registry for Exo-OS"
repository = "https://github.com/darkfireeee/Exo-OS"

[dependencies]
exo_ipc = { path = "../exo_ipc" }
exo_types = { path = "../exo_types" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
spin = { version = "0.9", default-features = false, features = ["rwlock"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lookup_bench"
harness = false

[lib]
name = "exo_service_registry"
path = "src/lib.rs"

[features]
default = ["persistent"]
persistent = []
health_check = []
ipc = []
